# ample

./: .gitignore  .oxlintrc.json  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  eslint.config.js  flake.nix  index.html  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  cli.rs  config.rs  error.rs  font.rs  log.rs  main.rs  message.rs  settings.rs  state.rs  status.rs  types.ts
src-tauri/: Cargo.toml  build.rs  bundle-mpv.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  config.rs  error.rs  lib.rs  library.rs  main.rs  settings.rs
src-tauri/src/audio/: decode.rs  mod.rs
src-tauri/src/miniaudio/: error.rs  mod.rs
src/components/: Loading.tsx  Player.tsx  Search.tsx  SongList.tsx
src/components/ui/: button-variants.ts  button.tsx  card.tsx
src/context/: PlayerContext.tsx  PlayerProvider.tsx  player-context.ts
src/hooks/: usePlayer.ts  useSongPlayer.ts  useVim.ts
src/lib/: utils.ts
src/miniaudio/: mod.rs
src/pages/: Home.tsx  Queue.tsx  SearchPage.tsx  Welcome.tsx
src/state/: mod.rs  snackbar.rs
src/state/status/: home.rs  idle.rs  loading_library.rs  mod.rs  should_load_library.rs
src/stream/: mod.rs  status.rs
src/ui/: home.rs  loading.rs  mod.rs  snackbar.rs  spinner.rs  welcome.rs
src/utils/: index.ts  result.ts
