[package]
name = "ample"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
cpal = { version = "0.17.0", default-features = false }
dirs = "6.0.0"
gil = "0.5.6"
iced = { version= "0.14.0", features = ["advanced"] }
rfd = "0.16.0"
rquickjs = "0.11.0"
serde = "1"
serde_json = "1"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "opt-simd"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["fs"] }
