[package]
name = "ample"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
dirs = "6.0.0"
iced = { version= "0.14.0", features = ["advanced", "canvas", "tokio"] }
lofty = "0.22.4"
rfd = "0.16.0"
rquickjs = "0.11.0"
serde = "1"
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1", features = ["fs", "rt", "time"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "parking_lot"] }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.51"
