[package]
name = "ample"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ample_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
bindgen = "0.72.1"
cc = "1"

[dependencies]
# tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# config management
argh = "0.1.13"
dirs = "6.0.0"
tauri-plugin-log = "2"

# tracing
log = "0.4"
thiserror = "2.0.17"

lofty = "0.22.4"

# async
tokio = { version = "1", features = ["fs", "rt", "time"] }
tauri-plugin-dialog = "2"
rayon = "1.11.0"
