[package]
name = "ample"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ample_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# tauri
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# config management
argh = "0.1.19"
dirs = "6.0.0"
tauri-plugin-log = "2.8.0"

# tracing
log = "0.4.29"
thiserror = "2.0.18"

lofty = "0.24.0"

# audio playback
libmpv2 = "5.0.3"

# async
tokio = { version = "1.52.1", features = ["fs", "rt", "time"] }
tauri-plugin-dialog = "2.7.0"
rayon = "1.12.0"
